manifests/frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    name: frontend
    kubernetes.io/metadata.name: frontend
    app.kubernetes.io/part-of: cloud-retail
