manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-ui
  namespace: frontend
  labels:
    app: frontend-ui
    tier: web
    app.kubernetes.io/name: frontend-ui
    app.kubernetes.io/part-of: cloud-retail
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: frontend-ui
